tests/interpreter/for-loop-var-is-local.stderr
error: identifier 'ch' is not defined
 --> $DIR/for-loop-var-is-local.lox:2:1
  |
2 | ch;
  | ^^
