tests/interpreter/for-loop-var-is-local.lox
for ch in "bar" {}
ch;
